--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation project(':top-widget')
+    implementation project(':lib-widget')
 
     // TODO->引入测试框架
     testImplementation 'junit:junit:4.12'
